# hpc-dot-product

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md  dot_bench.cpp
